infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-mono
  labels:
    app: secure-mono
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-mono
  template:
    metadata:
      labels:
        app: secure-mono
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - name: secure-mono
        image: dahunsij/secure-mono:latest
        ports:
        - containerPort: 3000
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
