infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: secure-mono-service
spec:
  selector:
    app: secure-mono
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
