infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: monoapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monoapp-service
                port:
                  number: 80
  tls:
    - hosts:
        - monoapp.local
      secretName: monoapp-tls
